By using the attribute `is-tag-list` we outline a node where it's children are the tags of this event. (Not so sure how cool that is, but we have to move on)

--- a/src/example.html
+++ b/src/example.html
@@ -28,7 +28,7 @@
     <address>HolidayCheck Office - Germany, 81673 Munich, Neumarkter Str. 61</address>
     <a href="http://jscraftcamp.org/">event homepage</a><br>
     <a href="https://www.twitter.com/jscraftcamp">@JSCraftCamp</a><br>
-    <ul is-tag>
+    <ul is-tag-list>
       <li>conference</li>
       <li>JavaScript</li>
     </ul>
