--- a/src/example.html
+++ b/src/example.html
@@ -15,12 +15,12 @@
       padding: 0;
       display: inline;
     }
-      ul li {
-        background: #fcf8e3;
-        padding: .2em;
-        list-style: none;
-        display: inline;
-      }
+    li {
+      background: #fcf8e3;
+      padding: .2em;
+      list-style: none;
+      display: inline;
+    }
   </style>
   
   <hc-event>
@@ -28,11 +28,11 @@
     <address>HolidayCheck Office - Germany, 81673 Munich, Neumarkter Str. 61</address>
     <a href="http://jscraftcamp.org/">event homepage</a><br>
     <a href="https://www.twitter.com/jscraftcamp">@JSCraftCamp</a><br>
-    <ul is-tag-list>
+    <hc-event-tags>
       <li>unconference</li>
       <li>open space</li>
       <li>JavaScript</li>
-    </ul>
+    </hc-event-tags>
     <p>
       And maybe some details about the event, or not ...
     </p>
@@ -43,10 +43,10 @@
     <address>Some where else, not in HC offices</address>
     <a href="http://jscoderetreat.com/">event homepage</a><br>
     <a href="https://www.twitter.com/jscoderetreat">@JSCodeRetreat</a><br>
-    <ul is-tag-list>
+    <hc-event-tags>
       <li>CodeRetreat</li>
       <li>JavaScript</li>
-    </ul>
+    </hc-event-tags>
     <p>
       And maybe some details about the event, or not ...
     </p>
