Style event a bit more the way it looks on the techblog.

--- a/src/example.html
+++ b/src/example.html
@@ -7,46 +7,44 @@
     * {
       font-family: Verdana, Arial;
     }
-    address {
+    hc-event address {
       font-style: normal;
     }
-    ul {
-      margin: 0;
-      padding: 0;
-      display: inline;
-    }
-    li {
+    hc-event-tags li {
       background: #fcf8e3;
       padding: .2em;
       list-style: none;
       display: inline;
     }
+    hc-event img {
+      height: 20px;
+    }
   </style>
   
   <hc-event>
-    <time>2018-06-02 10:00</time> - <time>2018-06-02 18:00</time><br>
-    <address>HolidayCheck Office - Germany, 81673 Munich, Neumarkter Str. 61</address>
-    <a href="http://jscraftcamp.org/">event homepage</a><br>
-    <a href="https://www.twitter.com/jscraftcamp">@JSCraftCamp</a><br>
+    <time>2018-06-02 10:00</time> - <time>2018-06-02 18:00</time>
     <hc-event-tags>
       <li>unconference</li>
       <li>open space</li>
       <li>JavaScript</li>
     </hc-event-tags>
+    <address>HolidayCheck Office - Germany, 81673 Munich, Neumarkter Str. 61</address>
+    <a href="http://jscraftcamp.org/">JSCraftCamp 2018</a><br>
+    <a href="https://www.twitter.com/jscraftcamp">@JSCraftCamp</a><br>
     <p>
       And maybe some details about the event, or not ...
     </p>
   </hc-event>
   
   <hc-event>
-    <time>2018-05-01 9:30</time> - <time>2018-05-02 18:00</time><br>
-    <address>Some where else, not in HC offices</address>
-    <a href="http://jscoderetreat.com/">event homepage</a><br>
-    <a href="https://www.twitter.com/jscoderetreat">@JSCodeRetreat</a><br>
+    <time>2018-05-01 9:30</time> - <time>2018-05-02 18:00</time>
     <hc-event-tags>
       <li>CodeRetreat</li>
       <li>JavaScript</li>
     </hc-event-tags>
+    <address>Some where else, not in HC offices</address>
+    <a href="http://jscoderetreat.com/">JS CodeRetreat #13</a><br>
+    <a href="https://www.twitter.com/jscoderetreat">@JSCodeRetreat</a><br>
     <p>
       And maybe some details about the event, or not ...
     </p>
