Add some more tags.

--- a/src/example.html
+++ b/src/example.html
@@ -27,6 +27,8 @@
       <li>unconference</li>
       <li>open space</li>
       <li>JavaScript</li>
+      <li>self organizing</li>
+      <li>learning</li>
     </hc-event-tags>
     <address>HolidayCheck Office - Germany, 81673 Munich, Neumarkter Str. 61</address>
     <a href="http://jscraftcamp.org/">JSCraftCamp 2018</a><br>
