--- a/src/example.html
+++ b/src/example.html
@@ -2,22 +2,11 @@
 <html></html>
 <title>hc-event component</title>
 <script type="module" src="./HcEvent.js"></script>
+<link rel="stylesheet" href="./style.css"/>
 <body>
   <style>
     * {
       font-family: Verdana, Arial;
-    }
-    hc-event address {
-      font-style: normal;
-    }
-    hc-event-tags li {
-      background: #fcf8e3;
-      padding: .2em;
-      list-style: none;
-      display: inline;
-    }
-    hc-event img {
-      height: 20px;
     }
   </style>
   
