Oops, close html to early.

--- a/src/example.html
+++ b/src/example.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html></html>
+<html>
 <title>hc-event component</title>
 <script type="module" src="./HcEvent.js"></script>
 <link rel="stylesheet" href="./style.css"/>
