Provide structured data.

--- a/src/events-copy.html
+++ b/src/events-copy.html
@@ -76,7 +76,9 @@
   </hc-event>
   
   <hc-event>
-    <time>2018-05-01 9:30</time> - <time>2018-05-02 18:00</time>
+    <hc-event-times>
+      <time>2018-05-01 9:30</time> - <time>2018-05-02 18:00</time>
+    </hc-event-times>
     <hc-event-tags>
       <li>CodeRetreat</li>
       <li>JavaScript</li>
