Format dates nicely, when two dates are given.

--- a/src/events-copy.html
+++ b/src/events-copy.html
@@ -59,7 +59,7 @@
   </style>
   
   <hc-event>
-    <time>2018-06-02 10:00</time> - <time>2018-06-02 18:00</time>
+    <time>2018-06-02 10:00</time><time>2018-06-02 18:00</time>
     <hc-event-tags>
       <li>unconference</li>
       <li>open space</li>
@@ -77,7 +77,7 @@
   
   <hc-event>
     <hc-event-times>
-      <time>2018-05-01 9:30</time> - <time>2018-05-02 18:00</time>
+      <time>2018-05-01 9:30</time><time>2018-05-02 18:00</time>
     </hc-event-times>
     <hc-event-tags>
       <li>CodeRetreat</li>
