Extract the times.js and leave the delimiter-string up to the user.

--- a/src/events-copy.html
+++ b/src/events-copy.html
@@ -59,7 +59,7 @@
   </style>
   
   <hc-event>
-    <time>2018-06-02 10:00</time><time>2018-06-02 18:00</time>
+    <time>2018-06-02 10:00</time> - <time>2018-06-02 18:00</time>
     <hc-event-tags>
       <li>unconference</li>
       <li>open space</li>
@@ -76,9 +76,7 @@
   </hc-event>
   
   <hc-event>
-    <hc-event-times>
-      <time>2018-05-01 9:30</time><time>2018-05-02 18:00</time>
-    </hc-event-times>
+    <time>2018-05-01 9:30</time> to <time>2018-05-02 18:00</time>
     <hc-event-tags>
       <li>CodeRetreat</li>
       <li>JavaScript</li>
@@ -89,6 +87,16 @@
     <p>
       And maybe some details about the event, or not ...
     </p>
+  </hc-event>
+  
+  <hc-event>
+    <time>2018-04-16 19:00</time>
+    <hc-event-tags>
+      <li>Meetup</li>
+      <li>JavaScript</li>
+    </hc-event-tags>
+    <address>HolidayCheck offices, Munich, Germany</address>
+    <a href="https://www.meetup.com/JavaScript-The-Language/events/249034286/">JavaScript The Language - Map, Set, WeakMap</a>
   </hc-event>
 </body>
 </html>
