--- a/src/events-copy.html
+++ b/src/events-copy.html
@@ -67,6 +67,7 @@
       <li>self organizing</li>
       <li>learning</li>
     </hc-event-tags>
+    <br>
     <address>HolidayCheck Office - Germany, 81673 Munich, Neumarkter Str. 61</address>
     <a href="http://jscraftcamp.org/">JSCraftCamp 2018</a>
     <a href="https://www.twitter.com/jscraftcamp" class="fa fa-twitter"></a>
@@ -81,9 +82,10 @@
       <li>CodeRetreat</li>
       <li>JavaScript</li>
     </hc-event-tags>
+    <br>
     <address>Some where else, not in HC offices</address>
     <a href="http://jscoderetreat.com/">JS CodeRetreat #13</a>
-    <a href="https://www.twitter.com/jscoderetreat" class="fa fa-twitter"></a><br>
+    <a href="https://www.twitter.com/jscoderetreat" class="fa fa-twitter"></a>
     <p>
       And maybe some details about the event, or not ...
     </p>
@@ -95,6 +97,7 @@
       <li>Meetup</li>
       <li>JavaScript</li>
     </hc-event-tags>
+    <br>
     <address>HolidayCheck offices, Munich, Germany</address>
     <a href="https://www.meetup.com/JavaScript-The-Language/events/249034286/">JavaScript The Language - Map, Set, WeakMap</a>
   </hc-event>
