Hide too many tags and show them just on hover.

--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,30 @@
   </hc-event>
   
   <hc-event>
+    <time>2018-02-07 10:00</time> ... <time>2018-02-08 18:00</time>
+    <hc-event-tags>
+      <ul>
+        <li>conference</li>
+        <li>web performance</li>
+        <li>ads</li>
+        <li>third-party scripts</li>
+        <li>A/B testing</li>
+        <li>HTTP/2</li>
+        <li>debugging</li>
+        <li>JAM stack</li>
+        <li>PWA</li>
+        <li>web fonts loading</li>
+        <li>memory/CPU perf</li>
+        <li>service workers</li>
+      </ul>
+    </hc-event-tags>
+    <br>
+    <address>London, England</address>
+    <a href="https://smashingconf.com/">Smashing Conference</a>
+    <a href="https://www.twitter.com/smashingconf" class="fa fa-twitter"></a>
+  </hc-event>
+
+  <hc-event>
     <time>2018-04-16 19:00</time>
     <hc-event-tags>
       <ul>
@@ -107,5 +131,6 @@
     <address>HolidayCheck offices, Munich, Germany</address>
     <a href="https://www.meetup.com/JavaScript-The-Language/events/249034286/">JavaScript The Language - Map, Set, WeakMap</a>
   </hc-event>
+
 </body>
 </html>
