Serve the webcomponents polyfill and the built files (instead of the ES6 modules) for browsers that can't do ES6 modules yet.
The assumption we take here is: if a browser understands ES6 modules we assume it also knows web components without needing a ployfill. Let's see if this assumption breaks some day :).

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
 <link rel="shortcut icon" href="//techblog.holidaycheck.com/img/hc-labs-only-logo64x64.png">
 
 <script type="module" src="./HcEvent.js"></script>
+<script nomodule src="//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.2.0/webcomponents-hi-ce.js"></script>
+<script nomodule src="../build/HcEvent.js"></script>
 <link rel="stylesheet" href="./style.css"/>
 
 <body>
