Add the polyfill for all browsers ... not nice, but FF60 supports ES6 modules but not `window.customElements` ... so this is the simplest way to make all work, by just loading 7.8k too much for modern browsers :(.

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
 <title>The HolidayCheck Tech Blog | Events</title>
 <link rel="shortcut icon" href="//techblog.holidaycheck.com/img/hc-labs-only-logo64x64.png">
 
+<script src="//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.2.0/webcomponents-hi-ce.js"></script>
 <script type="module" src="./HcEvent.js"></script>
-<script nomodule src="//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.2.0/webcomponents-hi-ce.js"></script>
 <script nomodule src="../build/HcEvent.js"></script>
 <link rel="stylesheet" href="./style.css"/>
 
