Remove the special behavior for the event's address, this just makes things soo more complicated.
Relying on having to use the <address> tag sounds nice at first sight but after all, if we derive and reconstruct the HTML out of it, this has many drawbacks.
Such as 1) to know what your page will look like you have to understand the webcomponent 2) you rely on what DOM nodes the webcomp inserts in order to know how to style them
and 3) it makes the <address> tag required, even though it is not really useful, the better way is schema.org outlines of the content.
Additionally the <hc-event> component triggers a massive relayout on a page with many events, that is not really desirable.

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
 <title>The HolidayCheck Tech Blog | Events</title>
 <link rel="shortcut icon" href="//techblog.holidaycheck.com/img/hc-labs-only-logo64x64.png">
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.2.0/webcomponents-hi-ce.js"></script>
 <script type="module" src="./HcEvent.js"></script>
 <script nomodule src="../build/HcEvent.js"></script>
 <link rel="stylesheet" href="./style.css"/>
@@ -72,8 +71,8 @@
       </ul>
     </hc-event-tags>
     <br>
-    <address>HolidayCheck Office - Germany, 81673 Munich, Neumarkter Str. 61</address>
     <a href="http://jscraftcamp.org/">JSCraftCamp 2018</a>
+    <a href="http://maps.google.com/maps?q=HolidayCheck%20Office%20-%20Germany%2C%2081673%20Munich%2C%20Neumarkter%20Str.%2061" class="fa fa-map">HolidayCheck Office - Germany, 81673 Munich, Neumarkter Str. 61</a>
     <a href="https://www.twitter.com/jscraftcamp" class="fa fa-twitter"></a>
     <p>
       And maybe some details about the event, or not ...
@@ -89,8 +88,8 @@
       </ul>
     </hc-event-tags>
     <br>
-    <address>Some where else, not in HC offices</address>
     <a href="http://jscoderetreat.com/">JS CodeRetreat #13</a>
+    <a href="http://maps.google.com/maps?q=Some%20where%20else%2C%20not%20in%20HC%20offices" class="fa fa-map">Some where else, not in HC offices</a>
     <a href="https://www.twitter.com/jscoderetreat" class="fa fa-twitter"></a>
     <p>
       And maybe some details about the event, or not ...
@@ -116,8 +115,8 @@
       </ul>
     </hc-event-tags>
     <br>
-    <address>London, England</address>
     <a href="https://smashingconf.com/">Smashing Conference</a>
+    <a href="http://maps.google.com/maps?q=London%2C%20England" class="fa fa-map">London, England</a>
     <a href="https://www.twitter.com/smashingconf" class="fa fa-twitter"></a>
   </hc-event>
 
@@ -130,8 +129,8 @@
       </ul>
     </hc-event-tags>
     <br>
-    <address>HolidayCheck offices, Munich, Germany</address>
     <a href="https://www.meetup.com/JavaScript-The-Language/events/249034286/">JavaScript The Language - Map, Set, WeakMap</a>
+    <a href="http://maps.google.com/maps?q=HolidayCheck%20offices%2C%20Munich%2C%20Germany" class="fa fa-map">HolidayCheck offices, Munich, Germany</a>
   </hc-event>
 
 </body>
