Less specific CSS inside the component's style.

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,7 @@
     .fa-map:before {
       content: "\f041";
     }
+    
     hc-event {
       padding: 0.5rem 0 0.5rem 10rem;
     }
@@ -67,6 +68,13 @@
       font-size: small;
       margin: 0;
     }
+    hc-event-tags {
+      position: absolute;
+      width: 40rem;
+      height: 2rem;
+      overflow: hidden;
+    }
+    
   </style>
   
   <hc-event itemscope itemtype="http://schema.org/Event">
