One event without outline.

--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,7 @@
     hc-event:hover {
       background: #0058a311;
     }
+    hc-event p,
     hc-event [itemprop=description] {
       font-size: small;
       margin: 0;
@@ -166,6 +167,7 @@
     <a href="https://smashingconf.com/">Smashing Conference</a>
     <a href="http://maps.google.com/maps?q=London%2C%20England" class="fa fa-map">London, England</a>
     <a href="https://www.twitter.com/smashingconf" class="fa fa-twitter"></a>
+    <p>This event is not schema outlined at all, so it's not so nicely machine readable. Bummer.</p>
   </hc-event>
 
   <hc-event>
