--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
 
 <body>
   <style>
+    /*
+      The HC styles, as used on the tech blog.
+     */
     @import url(//fonts.googleapis.com/css?family=Open+Sans:400,600,700,800|Droid+Serif:400,400italic,700|Playfair+Display);html {
         font-family: sans-serif;
         -webkit-text-size-adjust: 100%;
@@ -56,27 +59,9 @@
       content: "\f041";
     }
     
-    hc-event {
-      padding: 0.5rem 0 0.5rem 10rem;
-    }
-    hc-event:nth-child(odd) {
-      background: #EEEEEE;
-    }
-    hc-event:hover {
-      background: #0058a311;
-    }
-    hc-event p,
-    hc-event [itemprop=description] {
-      font-size: small;
-      margin: 0;
-    }
-    hc-event-tags {
-      position: absolute;
-      width: 40rem;
-      height: 2rem;
-      overflow: hidden;
-    }
-    
+    /*
+      The <hc-event> specific styles.
+     */
   </style>
   
   <hc-event itemscope itemtype="http://schema.org/Event">
